--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -3,6 +3,7 @@
     --kolibri-accent-color:  hsl( 322, 73%, 52%);
     --kolibri-output-color:  hsl( 256, 82%, 55%);
     --kolibri-ok-color:      hsl( 104, 89%, 28%);
+    --kolibri-select-color:  hsl(  46, 90%, 84%);
     --kolibri-neutral-color: hsl(   0,  0%, 74%);
     --kolibri-shadow-color:  hsla(256, 82%, 55%, 0.2);
     --kolibri-box-shadow:    0 4px  8px 0 var(--kolibri-shadow-color),
@@ -13,3 +14,28 @@
     margin:     0;
     box-sizing: border-box;
 }
+
+/* --- default invalid handling --- */
+:invalid {
+    border-color: var(--kolibri-accent-color);
+}
+input[type=text]:invalid {
+    color: var(--kolibri-accent-color);
+}
+input:invalid {
+    border-color: transparent transparent var(--kolibri-accent-color) transparent;
+    position: relative;
+    overflow: visible;
+}
+/* todo: why is the below not working with input[type=text] ? */
+input:invalid::before {
+    content:    "";
+    position:   absolute;
+    top:        -.35ch;
+    left:       -.75ch;
+    background-color: var(--kolibri-accent-color);
+    width:      1ch;
+    height:     1ch;
+    border-radius: 50%;
+}
+/* --- end default invalid handling --- */
