default style: set box-sizing border-box on all elements and pseudo elements per default

--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -12,6 +12,8 @@
     font-family: "Roboto", "Poppins Regular", "Segoe UI", Arial, fallback, sans-serif;
     padding:    0;
     margin:     0;
+}
+*, *::before, *::after {
     box-sizing: border-box;
 }
 
