--- a/docs/css/kolibri-base.css
+++ b/docs/css/kolibri-base.css
@@ -9,7 +9,7 @@
     --kolibri-box-shadow:    0 4px  8px 0 var(--kolibri-color-shadow),
                              0 6px 20px 0 var(--kolibri-color-shadow);
 
-    font-family: "Roboto", "Poppins Regular", "Segoe UI", Arial, fallback, sans-serif;
+    font-family: ui-sans-serif,sans-serif;
     padding:    0;
     margin:     0;
 }
@@ -27,18 +27,24 @@ input:invalid {
 input[type=text]:invalid {
     color: var(--kolibri-color-accent);
 }
-/* we cannot use pseudo elements with input type text so we introduce an extra following span */
-label ~ span { /* the "holder" span for the input comes right after a label */
-    position: relative; /* such that we can position against it */
+/* We cannot use pseudo elements with input type text so we introduce an extra following span.
+   Note that the html structure is label - span ( input - span) like in simpleInputProjector.
+*/
+label + span { /* the "holder" span for the input comes right after a label */
+    position:   relative; /* such that we can position against it */
 }
-label ~ span > input ~ span {
-    position: absolute; /* get it out of the stacking context */
+label + span > input + span {
+    position:   absolute; /* get it out of the stacking context */
     top:        0;
-    left:       -1ch;
+    left:       0;
     width:      1ch;
-    height:     1ch;
+    aspect-ratio: 1;
+    transform:  translateX(-5ch);
 }
-label ~ span > input:invalid ~ span {
-    background-image: radial-gradient(closest-side, var(--kolibri-color-accent) 0%, transparent 100%);
+label + span > input:invalid + span {
+    background-image: radial-gradient(circle closest-side, white 0%, white 20%, var(--kolibri-color-accent) 99%, transparent 100%);
+    filter:           drop-shadow(0 0 .2ch var(--kolibri-color-accent));
+    transform:        translateX(-1ch);
+    transition:       transform 0.5s ease-out;
 }
 /* --- end default invalid handling --- */
