--- a/docs/src/examples/WorkingHours.css
+++ b/docs/src/examples/WorkingHours.css
@@ -47,10 +47,10 @@ em {
 }
 
 header div.kolibri-logo {
-    position: absolute;
-    top: 3em;
-    margin-left: 32em;
-    transform: scale(0.5);
+    height:         171px;
+    position:       absolute;
+    top:            3em;
+    margin-left:    32em;
 }
 
 .rules {
