add styles to example page

--- a/contrib/p5_wild_wyss/src/logger/example/example.css
+++ b/contrib/p5_wild_wyss/src/logger/example/example.css
@@ -1,17 +1,13 @@
-.RadioContainer {
-    display: flex;
-    margin-bottom: 1rem;
-}
-
-.InputSection {
+.container {
     display: inline-grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 0.5rem;
 }
 
-.InputSection > div {
-    margin-right: 1rem;
+.twoColumnItems {
+    grid-column-end: span 2;
 }
 
-.ButtonRow {
-    margin: 1rem;
+.twoColumnItems > Button {
+    margin: 3rem 0.5rem 0.5rem 1rem;
 }
