--- a/docs/src/examples/WorkingHours.css
+++ b/docs/src/examples/WorkingHours.css
@@ -34,6 +34,7 @@ output {
     color: var(--kolibri-color-output);
 }
 
+/*noinspection CssUnusedSymbol*/
 .darkTheme {
     filter: invert(85%) hue-rotate(180deg);
 }
