--- a/docs/src/kolibri/navigation/projector/navigation.css
+++ b/docs/src/kolibri/navigation/projector/navigation.css
@@ -1,8 +1,7 @@
-@import "docs/src/kolibri/navigation/projector/breadcrumb/breadCrumbProjector.css";
-@import "docs/src/kolibri/navigation/projector/bubble/bubbleNavigationProjector.css";
-@import "docs/src/examples/navigation/menue/dashboard/dashboardNavigationProjector.css";
-@import "docs/src/kolibri/navigation/projector/dashboard/dashboardNavigationProjector.css";
-@import "docs/src/kolibri/navigation/projector/card/cardNavigationProjector.css";
-@import "docs/src/kolibri/navigation/projector/flower/flowerNavigationProjector.css";
-@import "docs/src/kolibri/navigation/projector/pageSwitch/pageSwitchProjector.css";
-@import "docs/src/kolibri/navigation/projector/pageSwitch/github-gists-styles.css";
+@import "../../../../../docs/src/kolibri/navigation/projector/breadcrumb/breadCrumbProjector.css";
+@import "../../../../../docs/src/kolibri/navigation/projector/bubble/bubbleNavigationProjector.css";
+@import "../../../../../docs/src/kolibri/navigation/projector/dashboard/dashboardNavigationProjector.css";
+@import "../../../../../docs/src/kolibri/navigation/projector/card/cardNavigationProjector.css";
+@import "../../../../../docs/src/kolibri/navigation/projector/flower/flowerNavigationProjector.css";
+@import "../../../../../docs/src/kolibri/navigation/projector/pageSwitch/pageSwitchProjector.css";
+@import "../../../../../docs/src/kolibri/navigation/projector/pageSwitch/github-gists-styles.css";
