navigation: more streamlining and example inclusion

--- a/docs/src/examples/navigation/pages/static/home.css
+++ b/docs/src/examples/navigation/pages/static/home.css
@@ -1,14 +1,14 @@
 #content .home header {
-    display:        flex;
+    display: 		flex;
     flex-direction: column;
-    align-items:    center;
+    align-items: 	center;
 }
 
 #content .home div.kolibri-logo-svg {
-    height:       250px;
-    aspect-ratio: 1;
-    padding:      2em;
-    transition:   transform .4s linear;
+    height:         250px;
+    aspect-ratio:   1;
+    padding:        2em;
+    transition:     transform .4s linear;
 }
 
 #content .home svg {
@@ -16,96 +16,30 @@
 }
 
 #content .home .flatter {
-    animation-name:            kolibri-wings;
-    animation-duration:        .2s;
-    animation-iteration-count: 15;
-    animation-direction:       reverse;
-    animation-timing-function: ease-in;
-    transform-origin:          45% 45%;
+    animation-name:             kolibri-wings;
+    animation-duration:         .2s;
+    animation-iteration-count:  15;
+    animation-direction:        reverse;
+    animation-timing-function:  ease-in;
+    transform-origin:           45% 45%;
 }
 
-#content .home
-
-@keyframes kolibri-wings {
+#content .home @keyframes kolibri-wings {
     from {
-        transform: scaleX(1) rotate(0deg);
+        transform:      scaleX(1) rotate(0deg);
     }
     to {
-        transform: scaleX(-1) rotate(30deg);
+        transform:      scaleX(-1) rotate(30deg);
     }
 }
 
 #content .home section.buttons {
-    display:         flex;
+    display: flex;
     justify-content: center;
 }
 
 #content .home a.btn {
     margin-right: 2em;
-}
-
-
-a.btn {
-    display:         block;
-    text-align:      center;
-    width:           12em;
-    padding:         1rem;
-    border-radius:   8px;
-    text-decoration: none;
-    box-shadow:      var(--kolibri-box-shadow);
-
-}
-
-a.btn.primary {
-    color:            #FFFFFF;
-    background-color: var(--kb-hsla-primary-accent);
-    border:           2px solid var(--kolibri-color-shadow);
-}
-
-a.btn.accent {
-    color:            var(--kb-hsla-primary-accent);
-    background-color: #FFFFFF;
-    border:           2px solid var(--kb-hsla-primary-accent);
-}
-
-.glow {
-    position: relative;
-}
-
-.glow::before, .glow::after {
-    content:         '';
-    position:        absolute;
-    left:            0;
-    top:             0;
-    background:      linear-gradient(45deg, #993333, #ff00ff, #6e0dd0, #099fff, #ff00, #993333);
-    background-size: 400%;
-    width:           100%;
-    height:          100%;
-    border-radius:   8px;
-    z-index:         -1;
-    animation:       animate 20s linear infinite;
-}
-
-@keyframes animate {
-    0% {
-        background-position: 0 0;
-    }
-    50% {
-        background-position: 400% 0;
-    }
-    100% {
-        background-position: 0 0;
-    }
-}
-
-a.glow::before {
-    filter:     blur(.8em);
-    opacity:    0;
-    transition: opacity 0.5s ease-in-out;
-}
-
-a.glow:hover::before {
-    opacity: 100;
 }
 
 
