--- a/docs/src/kolibri/navigation/projector/dashboard/dashboardNavigationProjector.css
+++ b/docs/src/kolibri/navigation/projector/dashboard/dashboardNavigationProjector.css
@@ -1,57 +1,57 @@
-* {
-    --kolibri--light---black--900: hsla(0, 0%, 98.8%, 1);
-    --kolibri--light---black--800: hsla(240, 45.5%, 97.8%, 1);
-    --kolibri--light---black--600: hsla(233, 26.7%, 88.2%, 1);
-    --kolibri--light---black--700: hsla(231, 28%, 95.1%, 1);
-    --kolibri--light---black--500: hsla(234, 18%, 68.4%, 1);
-    --kolibri--light---black--400: hsla(235, 13.7%, 50%, 1);
-    --kolibri--light---black--300: hsla(247, 15.3%, 34.7%, 1);
-    --kolibri--light---black--200: hsla(249, 23.1%, 17.8%, 1);
-    --kolibri--light---black--100: hsla(240, 35.5%, 12.2%, 1);
 
-    box-sizing: border-box;
-}
+/*
+    Styling for the dashboard navigation.
+
+    This style depends on Kolibri-base being set such that all respective
+    colors, fonts, and defaults are available.
+*/
 
 .dashboard-refined-nav {
-    --base-unit: 4em;
-    /*--detail-width: 0;*/
+
+    --base-unit:      4rem;
     --detail-width:   calc(  4 * var(--base-unit));
     --header-height:  calc(4/5 * var(--base-unit));
-    --std-padding: calc(1/5 * var(--base-unit));
-    position: fixed;
-    top:  0;
-    left: 0;
-    min-height: calc(100vh - 1/4 * var(--base-unit));
-    background-color: transparent;
-    display: grid;
-    grid-template-columns: calc(3/2 * var(--base-unit));
+    --std-padding:    calc(1/5 * var(--base-unit));
     font-family:      var(--kb-font-rubik-light-regular);
-    margin: calc(1/8 * var(--base-unit));
-    box-shadow: 2px 0 4px #dbd7db;
-    border-radius: calc(1/6 * var(--base-unit));
+
+    /* docked to the left, full height*/
+    position: fixed;
+    inset:    0 auto 0 0;
+    z-index:  10;
+
+    display: grid;
+    grid-template-columns: var(--base-unit);                        /* default: closed, only one column*/
+
+    &.open {
+        grid-template-columns: var(--base-unit) var(--detail-width); /* two columns if open */
+    }
 }
 
-.dashboard-refined-nav.open{
-    grid-template-columns: calc(3/2 * var(--base-unit)) var(--detail-width);
+.dashboard-refined-nav .invisible {
+    display: none;
 }
+
+/* start overview (left column) */
 
 .dashboard-refined-nav .overview {
-    min-height:       100%;
-    /*background-color: var(--kb-color-hsl-bg-light);*/
-    background-color: var(--kb-color-hsl-lavender-200);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: calc(1/6 * var(--base-unit));
+    min-height:         100%;
+    background-color:   #F7F7FC;
+    display:            flex;
+    flex-direction:     column;
+    align-items:        center;
+    border-radius:      0
+                        calc(1/6 * var(--base-unit))
+                        calc(1/6 * var(--base-unit))
+                        0;
 }
 
 .dashboard-refined-nav.open .overview {
-    border-radius: calc(1/6 * var(--base-unit)) 0 0 calc(1/6 * var(--base-unit));
+    border-radius:      0;
 }
 
 .dashboard-refined-nav .overview .logo {
-    padding-top:      calc(1/2 * var(--base-unit));
-    padding-bottom:   var(--base-unit);
+    padding-top:      var(--std-padding) ;
+    padding-bottom:   var(--std-padding);
 }
 
 .dashboard-refined-nav .overview .logo img {
@@ -66,131 +66,185 @@
 .dashboard-refined-nav .overview .content .row img {
     height:       calc(4/9 * var(--base-unit));
     aspect-ratio: 1;
-    filter: invert(27%) sepia(12%) saturate(1127%) hue-rotate(207deg) brightness(98%) contrast(84%);
+    filter: invert(92%) sepia(11%) saturate(202%) hue-rotate(196deg) brightness(92%) contrast(98%);
 }
 
 .dashboard-refined-nav .overview .content .row img.active {
-    filter: invert(25%) sepia(97%) saturate(7429%) hue-rotate(275deg) brightness(94%) contrast(100%);
+    filter: invert(9%) sepia(99%) saturate(6728%) hue-rotate(266deg) brightness(103%) contrast(125%); /* convert svg color to --kb-color-hsl-primary-accent */
 }
 
 .dashboard-refined-nav .overview .content .row img:hover {
-    filter: invert(51%) sepia(76%) saturate(6321%) hue-rotate(306deg) brightness(100%) contrast(105%);
+    filter: invert(51%) sepia(76%) saturate(6321%) hue-rotate(306deg) brightness(100%) contrast(105%); /* convert svg color to --kb-color-hsl-pink-500 */
 }
 
+/* when opened, the overview nav should show now content */
 .dashboard-refined-nav.open .overview .content .row img {
     display: none;
 }
 
+/* background circle for the open/closed toggle "button" */
 .dashboard-refined-nav .overview .toggle {
-    min-height: calc(1/2 * var(--base-unit));
-    min-width:  calc(1/2 * var(--base-unit));
-    position: absolute;
-    bottom: calc(1/2 * var(--base-unit));
-    display: flex;
-    justify-content: center;
-    align-items:     center;
-    border-radius: var(--base-unit);
-    background-color: #A0A3BD;
-    /*background-color: var(--kb-hsla-primary-bg);*/
+    /*it needs to go to the bottom, possibly on top of any menu items if there are many*/
+    position:   absolute;
+    bottom:     var(--std-padding);
+    z-index:    20;
+
+    /*the included image must be centered*/
+    display:     grid;
+    place-items: center;
+
+    min-height:       calc(1/2 * var(--base-unit));
+    aspect-ratio:     1 / 1;
+    border-radius:    50%;
+    background-color: var(--kb-hsla-primary-bg);
 }
 
 .dashboard-refined-nav .overview .toggle img {
     height:       calc(9/20 * var(--base-unit));
     aspect-ratio: 1;
-    transition: 0.2s;
-    cursor: pointer;
+    transition:   transform ease-in-out 0.2s;
+    cursor:       pointer;
 }
 
 .dashboard-refined-nav.open .overview .toggle img {
-    transform: rotate(180deg);
-    transition: 0.2s;
+    transform:    rotate(180deg);
+    transition:   transform ease-in-out 0.2s;
 }
+
+/* end of overview */
+
+/* start detail (expanded right column) */
 
 .dashboard-refined-nav .detail {
     display: none;
 }
 
 .dashboard-refined-nav.open .detail {
-    display: block;
+    display:          initial;
     min-height:       100%;
-    background-color: var(--kb-color-hsl-purple-100);
-    /*background-color: var(--kb-hsla-primary-bg);*/
-    border-radius: 0 calc(1/6 * var(--base-unit)) calc(1/6 * var(--base-unit)) 0;
+    background-color: var(--kb-hsla-primary-bg);
+    border-radius:    0
+                      calc(1/6 * var(--base-unit))
+                      calc(1/6 * var(--base-unit))
+                      0;
 }
 
 .dashboard-refined-nav .detail .header {
     height:           var(--header-height);
-    padding-top:      calc(1/2 * var(--base-unit));
+    padding-top:      var(--std-padding);
     padding-bottom:   var(--std-padding);
-    padding-left:     calc(1/3 * var(--base-unit));
-    margin-bottom:    calc(var(--base-unit) - calc( 9/8 * var(--std-padding)));
+    padding-left:     var(--std-padding);
     display:          flex;
     flex-direction:   column;
     justify-content:  center;
     font-size:        var(--font-size-h5);
-    color: var(--kolibri--light---black--200);
+    color:            black;
 }
 
 .dashboard-refined-nav .detail .content {
     margin-bottom: calc(3/5 * var(--base-unit));
 }
 
-.dashboard-refined-nav .detail .content .row {
-    margin-bottom:    calc(1/20 * var(--base-unit));
-    padding-left:     calc(1/2 * var(--base-unit));
+ /*Wrapper*/
+.dashboard-refined-nav .tree {
+    display: flex;
+    flex-direction: column;
+    padding-left: calc(2/9 * var(--base-unit));
+    padding-right: calc(2/9 * var(--base-unit));
+    overflow: hidden;
 }
 
-.dashboard-refined-nav .detail .content .node {
+ /*Root Nodes*/
+.dashboard-refined-nav .tree > .tree-node  {
+    margin-bottom: calc(3/5 * var(--base-unit))
+}
+
+.dashboard-refined-nav .tree > .tree-node.invisible {
+    display: none;
+}
+
+.dashboard-refined-nav .tree > .tree-node > span {
     display: flex;
-    flex-wrap: wrap;
     align-items: center;
     gap: 0 1em;
-}
-
-.dashboard-refined-nav .detail .content .row img {
-    height: calc(2/5 * var(--base-unit));
-    aspect-ratio: 1;
-    filter: invert(27%) sepia(12%) saturate(1127%) hue-rotate(207deg) brightness(98%) contrast(84%);
-}
-
-.dashboard-refined-nav .detail .content .row svg {
-    width: calc(2/5 * var(--base-unit));
-    height: calc(2/5 * var(--base-unit));
-    visibility: hidden;
-}
-
-.dashboard-refined-nav .detail .content .row.root img.active {
-    filter: invert(25%) sepia(97%) saturate(7429%) hue-rotate(275deg) brightness(94%) contrast(100%); /* convert svg color to --kb-color-hsl-primary-accent */
-}
-
-.dashboard-refined-nav .detail .content .row a.active {
-    font-style: var(--kb-font-rubik-light-medium);
-    font-weight: 600;
-    color: var(--kb-color-hsl-pink-500);
-}
-
-.dashboard-refined-nav .detail .content .row.root {
     margin-bottom: calc(1/5 * var(--base-unit));
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 0 1em;
-}
-
-.dashboard-refined-nav .detail .content .row.root span {
     text-transform: uppercase;
     font-size: var(--font-size-textM);
-    color: var(--kolibri--light---black--200);
+    color: black;
 }
 
-.dashboard-refined-nav .detail .content .row a {
+.dashboard-refined-nav .tree > .tree-node > span > a {
     font-size: var(--font-size-textM);
     letter-spacing: 0.01em;
     text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    color: black;
+    pointer-events: none;
+}
+
+.dashboard-refined-nav .tree > .tree-node > span > img {
+    height: calc(2/5 * var(--base-unit));
+    aspect-ratio: 1;
+}
+
+.dashboard-refined-nav .tree > .tree-node > span > img.active {
+    filter: invert(9%) sepia(99%) saturate(6728%) hue-rotate(266deg) brightness(103%) contrast(125%); /* convert svg color to --kb-color-hsl-primary-accent */
+}
+
+ /*Child Nodes*/
+.dashboard-refined-nav .tree-node > .tree-node {
+    margin-left: calc(2/5 * var(--base-unit));
+}
+
+.dashboard-refined-nav .tree-node > .tree-node.invisible {
+    display: none;
+}
+
+.dashboard-refined-nav .tree > .tree-node > .tree-node {
+    margin-left: 0;
+}
+
+.dashboard-refined-nav .tree-node > .tree-node > span {
+    display: flex;
+    align-items: center;
+    gap: 0 1em;
+    margin-bottom: calc(1/20 * var(--base-unit));
+}
+
+.dashboard-refined-nav .tree-node > .tree-node > span > img {
+    filter: invert(80%) sepia(10%) saturate(568%) hue-rotate(196deg) brightness(81%) contrast(88%); /* convert svg color to --kb--light--black-500 */
+    width: calc(2/5 * var(--base-unit));
+    height: calc(2/5 * var(--base-unit));
+}
+
+.dashboard-refined-nav .tree-node > .tree-node > span > img.active {
+    filter: invert(9%) sepia(99%) saturate(6728%) hue-rotate(266deg) brightness(103%) contrast(125%); /* convert svg color to --kb-color-hsl-primary-accent */
+}
+
+.dashboard-refined-nav .tree-node > .tree-node > span > a {
+    font-size: var(--font-size-textM);
+    letter-spacing: 0.01em;
+    text-decoration: none;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: var(--kolibri--light---black--500);
 }
 
-.dashboard-refined-nav .detail .content .row a:hover {
+.dashboard-refined-nav .tree-node > .tree-node > span > a.active {
+    font-style: var(--kb-font-rubik-light-medium);
     color: var(--kb-color-hsl-bg-dark);
+}
+
+.dashboard-refined-nav .tree-node > .tree-node > span > a:hover {
+    color: var(--kb-color-hsl-pink-500);
+}
+
+.dashboard-refined-nav .tree > div.tree-node:not(:has(div.tree-node)){
+    display: none;
+}
+
+.dashboard-refined-nav .tree > div.tree-node:has( > :nth-child(2)#debug-node) {
+    display: none;
 }
 
